# sangria

./: .gitignore  .prettierignore  Agent-Dashboard.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.test  Makefile  README.md  SANGRIA_BUY_SKILL.md  SDK_REORGANIZATION.md  Sangria-Architecture.md  Sangria-Overview.md  docker-compose.dev.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.githooks/: pre-push
.github/: README.md
.github/workflows/: ci.yml  deploy-sdks.yml  publish-python-sdk.yml  publish-ts-sdk.yml  release.yaml  (+3 more)
backend/: .dockerignore  .env.example  CLAUDE.md  README.md  go.mod  go.sum  main.go
dbSchema/: .env.example  CLAUDE.md  README.md  migrate.js  package.json  pnpm-lock.yaml  schema.ts
deployment/: DEPLOYMENT.md  SDK_VERSIONS.md
frontend/: .env.example  CLAUDE.md  README.md  SECURITY.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
guides-and-knowledge/: x402-protocol.md  x402-variable-pricing.md
merchant_server/: app.py
mythos/: .env.example  CLAUDE.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts
playground/: README.md
playground/merchant-exa/: .env.example  pyproject.toml
playground/merchant-exa/src/: main.py
playground/merchant-fastapi/: pyproject.toml
playground/merchant-fastapi/src/: main.py
playground/merchant-jokes/: pyproject.toml
playground/merchant-jokes/src/: main.py
sdk/: README.md
tests/: .gitignore  README.md  TESTING.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  run-all-tests.sh  setup.sh  vitest.config.ts
(+440 files in other folders)
