[project]
name = "merchant-fastapi"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.135.1",
  "uvicorn>=0.41.0",
  "sangria-core",
  "python-dotenv>=1.2.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
sangria-core = { path = "../../sdk/merchants/python", editable = true }
